--- a/Assignmemt 1.ipynb
+++ b/Assignmemt 1.ipynb
@@ -2,7 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1+1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -14,15 +34,12 @@
     }
    ],
    "source": [
-    "\n",
     "l=[]\n",
     "for i in range(2000, 3201):\n",
     "    if (i%7==0) and (i%5!=0):\n",
     "        l.append(i)\n",
     "\n",
-    "print (l)\n",
-    "\n",
-    "        "
+    "print (l)"
    ]
   },
   {
@@ -170,20 +187,6 @@
     "\n",
     "print(s)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
